timer block colors option

--- a/src/style.sass
+++ b/src/style.sass
@@ -85,6 +85,11 @@ $container-breakpoint: 992px
         border-radius: 50%
         box-shadow: 0 0 20px red, 0 0 60px red
 
+    .clock
+      width: calc($timer-width / 2.5) !important
+      height: calc($timer-width / 2.5) !important
+      fill: #d8cece
+
     #seconds
       color: black
       &.green
